--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -1,13 +1,16 @@
 extends ../layout/main.pug
 
+include ../blocks/footer/_footer.pug
 include ../blocks/headerBlock/_headerBlock.pug
 include ../blocks/sForm/_sForm.pug
 include ../blocks/sContent/_sContent.pug
+include ../blocks/sSlider/_sSlider.pug
  
-include ../blocks/sContact/_sContact.pug
+include ../blocks/sSuccess/_sSuccess.pug
 include ../blocks/sForm/_sForm.pug
-include ../blocks/sForm/_sForm.pug
-include ../blocks/sCatalog/_sCatalog.pug
+include ../blocks/sQA/_sQA.pug
+include ../blocks/sApply/_sApply.pug
+include ../blocks/sLastChance/_sLastChance.pug
 
 block variables
 	- let  mainPage= 'main-page' 
@@ -22,9 +25,10 @@ block pagecontent
 	
 	+parts('header')
 	main
-		+headerBlock 
-		+sCatalog
-		+sForm()
-		+sContact()
-		
-	+parts('footer')
+		//- +headerBlock 
+		+sApply
+		+sQA
+		+sLastChance
+		+sSlider('P.S. Все еще откладываете решение?', 'Заполните паузу, полистайте сделки из моего Телеграм-канала. Все эти акции я выкладывал публично:')
+		+sSuccess
+	+footer
