--- a/sourse/pug/blocks/sVideo/_sVideo.scss
+++ b/sourse/pug/blocks/sVideo/_sVideo.scss
@@ -1,8 +1,11 @@
-// start .sSlider
-.sSlider {
+// start .sVideo
+.sVideo {
 	--sPT: #{rem(0)};
-	--sPB: #{rem(0)};
-	--sTPB: #{rem(32)};
+	// --sPB: #{rem()};
+	// --sTPB: #{rem()};
+	@include media-breakpoint-up(lg) {
+    --sPB: #{rem(40)};
+    }
 	
 	&__row{
 		// --bs-gutter-x: #{rem()};
@@ -11,13 +14,12 @@
 	.section-title{
 		
 	}
-	position: relative;
-	.res-i {
-    max-height: rem(553);
-  }
-  &.mb-xl {
-    margin-bottom: rem(64);
-  }
+	&__col{
+		
+	}
+	&__item{
+		
+	}
 
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
@@ -26,4 +28,4 @@
 	@include media-breakpoint-between(md, xl) {}
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
-} // end.sSlider
+} // end.sVideo
