--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -16,7 +16,7 @@ $gray-600: #6c757d !default;
 $gray-700: #272428;
 $gray-800: #101010;
 $gray-900: #0F0F0F;
-$gray-950: #0D0D0D;
+$gray-950: #141414;
 $black:    #000 !default;
 // scss-docs-end gray-color-variables
 
