--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -123,23 +123,32 @@
 	--bs-btn-line-height: 1;
 	--bs-btn-border-radius: #{rem(16)};
 
-	--bs-btn-color: #{$body-color};
-  background: linear-gradient(180deg, #e90b0b 0%, #930f0f 100%);
-	// --bs-btn-bg: #{linear-gradient(180deg, #e90b0b 0%, #930f0f 100%)};
-	--bs-btn-border-color: #{$red};
+  &.btn-primary {
+    --bs-btn-color: #{$body-color};
+    background: linear-gradient(180deg, #e90b0b 0%, #930f0f 100%);
+    // --bs-btn-bg: #{linear-gradient(180deg, #e90b0b 0%, #930f0f 100%)};
+    --bs-btn-border-color: #{$red};
+  
+    --bs-btn-hover-color: #{$body-color};
+    // --bs-btn-hover-bg: #06d5a8;
+    // --bs-btn-hover-border-color: #06d5a8;
+  
+    // --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #{$red};
+    --bs-btn-active-border-color: #{$red};
+  
+    // --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #{$red};
+    --bs-btn-disabled-border-color: #{$red};
+    box-shadow: 0 18px 22px 0 rgba(214, 30, 30, 0.25) !important;
+  }
 
-	--bs-btn-hover-color: #{$body-color};
-	// --bs-btn-hover-bg: #06d5a8;
-	// --bs-btn-hover-border-color: #06d5a8;
+  &.btn-light {
 
-	// --bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #{$red};
-	--bs-btn-active-border-color: #{$red};
+    --bs-btn-color: #272428;
+  }
 
-	// --bs-btn-disabled-color: #fff;
-	--bs-btn-disabled-bg: #{$red};
-	--bs-btn-disabled-border-color: #{$red};
-  box-shadow: 0 18px 22px 0 rgba(214, 30, 30, 0.25) !important;
+
 	display: inline-block;
 
 	@include media-breakpoint-up(sm) {
@@ -152,6 +161,11 @@
 
   .icon {
     margin-left: rem(20);
+    
+    @include media-breakpoint-down(md) {
+      font-size: rem(16);
+      margin-left: rem(12);
+    }
   }
 }
 
