--- a/sourse/pug/blocks/sSlider/_sSlider.pug
+++ b/sourse/pug/blocks/sSlider/_sSlider.pug
@@ -6,6 +6,5 @@ mixin sSlider(title, text)
 				.section-title.text-center
 					h4=title
 					p=text
-				+defSlider
-					- for (var i = 1; i <= 15; i++)
-						+e.slide.swiper-slide(data-fancybox='modal-slider-bottom' data-src=`img/st-review-${i}.png`): +img(`img/st-review-${i}.png`).res-i
+				if block
+					block
