--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -17,6 +17,16 @@
 	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
 	width: calc(32 / #{$h} *1em );
 }
+.icon-calendar {
+	$h: 20;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(20 / #{$h} *1em );
+}
+.icon-capa {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(48 / #{$h} *1em );
+}
 .icon-check {
 	$h: 27;
 	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
@@ -37,10 +47,45 @@
 	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
 	width: calc(24 / #{$h} *1em );
 }
+.icon-grow {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(49 / #{$h} *1em );
+}
+.icon-info {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(49 / #{$h} *1em );
+}
 .icon-instagram {
 	$h: 24;
 	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
 	width: calc(24 / #{$h} *1em );
+}
+.icon-market {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(49 / #{$h} *1em );
+}
+.icon-ok {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(49 / #{$h} *1em );
+}
+.icon-point {
+	$h: 16;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(16 / #{$h} *1em );
+}
+.icon-rapid {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(48 / #{$h} *1em );
+}
+.icon-star {
+	$h: 48;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(48 / #{$h} *1em );
 }
 .icon-telegram {
 	$h: 16;
