--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -17,6 +17,7 @@
 	--swiperColorDefHover: var(--bs-primary);
 	--swiperBgDefHover: #ffffff;
   --dark-card-bg: $gray-950;
+  --accent-color: #{$pink};
 
 	//  --carousel-button-width: 48px;
 	//  --carousel-button-height: 48px;
