feat: add btn scroll to form

--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -47,7 +47,7 @@ mixin parts(elem)
 
 
 mixin btnBase(text)
-	.btn.btn-primary.btn-base&attributes(attributes)(href='#modal-call')!= text
+	.btn.btn-primary.scroll-link.btn-base&attributes(attributes)(href='#form-link')!= text
 		+icon('btn-arrow')
 
 
