--- a/sourse/pug/blocks/sApply/_sApply.pug
+++ b/sourse/pug/blocks/sApply/_sApply.pug
@@ -12,7 +12,7 @@ mixin sApply(data)
 					+stepCard('Если необходимо, Вас бесплатно проконсультирует специалист Инфоклуба')
 					+stepCard('Выберите подходящую версию участия, оплатите ее стоимость')
 					+stepCard('Уже через одну минуту после оплаты Вам откроется доступ в закрытую группу Инфоклуба с обучающими материалами')
-				+e.form.form
+				+e.form.form#form-link
 					.form-title.text-center
 						h4 Лучшие условия доступны самым быстрым!
 						p Введите свои данные прямо сейчас, чтобы выбрать выгодный комплект:
