--- a/sourse/pug/blocks/sYouCan/_sYouCan.pug
+++ b/sourse/pug/blocks/sYouCan/_sYouCan.pug
@@ -17,6 +17,6 @@ mixin sYouCan(data)
 					+stepCard('Четкие пошаговые инструкции', 'Каждый шаг торговой системы прост и однозначен. Нет места догадкам и неопределенности. Вы точно будете знать, что, когда и как делать.')
 				+e.btn-wrap.text-center
 					h4 Поверьте в себя и начните зарабатывать реальные деньги уже на этой неделе!
-					.btn.btn-light.btn-base.link-modal-js&attributes(attributes)(href='#') Получите торговую систему «Точка входа» прямо сейчас
+					.btn.btn-light.btn-base.scroll-link&attributes(attributes)(href='#form-link') Получите торговую систему «Точка входа» прямо сейчас
 						+icon('btn-arrow')
 	// end sYouCan
