--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -2,8 +2,23 @@ mixin sContent()
 	// start sContent
 	+b.SECTION.sContent.section#sContent&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 sContent
-				
 			+e.row.row
+				+e.col.col-lg-6
+					+b.section-title
+						h2 Зарабатывать каждый день в трейдинге – утопия или реальность?
+					+e.content
+						p Представьте, что у Вас каждый день есть список из 4 акций, и Вы точно знаете, что одна из них сегодня выстрелит в цене.<br>Вы даже точно знаете, как себя поведет эта акция непосредственно перед ростом.
+						p Вы просто ждете конкретную и знакомую Вам ситуацию, а потом забираете прибыль за 10 минут и закрываете торговый терминал.
+				+e.col.col-lg-6: +e.wrap
+					+e.author 
+						+img('img/avatar.png').avatar
+						.h4.text-primary Меня зовут <br>Станислав Добровский.
+					+e.content
+						p Я знаю, как заранее находить акции, в которых сегодня появится волатильность.
+						p Даже когда весь рынок летит вниз, всегда есть пару акций, которые в этот день растут. Моя торговая система позволяет такие акции находить каждый день.
+						p Подтверждено публичной статистикой:
+						.h4 В среднем 15 дней в месяце приносят прибыль от 5% к депозиту в день.
+			+e.item.text-center
+				.h4 Интересно освоить эту торговую систему?
+				p Читайте внимательно, расскажу, как это сделать.
 	// end sContent
