--- a/sourse/pug/blocks/sContent/_sContent.scss
+++ b/sourse/pug/blocks/sContent/_sContent.scss
@@ -5,23 +5,68 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
+	@include media-breakpoint-up(lg) {
+    --sTPB: #{rem(40)};
+    --sPB: #{rem(60)};
+  }
+
+	background: linear-gradient(180deg, #141414 0%, #0f0f0f 100%);
+  border-radius: 40px 40px 0 0;
+
 	&__row{
 		// --bs-gutter-x: #{rem()};
 		--bs-gutter-y: var(--bs-gutter-x);
-
+      margin-bottom: rem(54);
 	}
+
 	.section-title{
-		
+		h2 {
+      line-height: 90%;
+    }
 	}
-	&__col{
 
+	&__content {
+    @include media-breakpoint-up(xl) {
+      max-width: rem(555);
+    }
+    p {
+      margin-bottom: rem(22);
+    }
 	}
-	&__item{
 
+	&__author {
+    display: flex;
+    align-items: center;
+    gap: rem(24);
+    margin-bottom: rem(24);
 	}
-	&__slide{
-		height: auto;
-	}
+
+  &__wrap {
+    padding: rem(40);
+    border-radius: $border-radius;
+    box-shadow: 0 -49px 49px 0 rgba(0, 0, 0, 0.03);
+    background: #0d0d0d;
+    @include media-breakpoint-up(xl) {
+      margin-left: rem(-30);
+    }
+  }
+
+  .h4 {
+    margin-bottom: 0;
+    line-height: 100%;
+  }
+
+  .avatar {
+    width: rem(78);
+    border-radius: 50%;
+  }
+
+  &__item {
+    .h4 {
+      margin-bottom: rem(16);
+    }
+  }
+
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
