--- a/sourse/pug/blocks/sResults/_sResults.pug
+++ b/sourse/pug/blocks/sResults/_sResults.pug
@@ -38,7 +38,7 @@ mixin sResults(data)
 	// end sResults
 
 mixin slideItemAuto(month, t1, t2, sum)
-	.swiper-slide: +b.slide-item-auto
+	.swiper-slide: +b.slide-item-auto.card-bordered
 		+e.title
 			+icon('calendar')
 			| #{month}
