--- a/sourse/pug/blocks/sSlider/_sSlider.pug
+++ b/sourse/pug/blocks/sSlider/_sSlider.pug
@@ -1,6 +1,6 @@
 mixin sSlider(title, text)
 	// start sSlider
-	+b.SECTION.sSlider.section#sSlider&attributes(attributes)
+	+b.SECTION.sSlider.section&attributes(attributes)
 		.container
 			.section-title.text-center
 				h4=title
@@ -10,7 +10,7 @@ mixin sSlider(title, text)
 
 mixin sSlider2(title, text)
 	// start sSlider
-	+b.SECTION.sSlider.section#sSlider&attributes(attributes)
+	+b.SECTION.sSlider.section&attributes(attributes)
 		.container
 			+e.item.text-center
 				h4=title
