--- a/sourse/pug/blocks/sStudy/_sStudy.pug
+++ b/sourse/pug/blocks/sStudy/_sStudy.pug
@@ -11,7 +11,7 @@ mixin sStudy(data)
 						p Онлайн-практикум – означает, что обучаться Вы будете на онлайн-занятиях, с возможностью сразу задавать вопросы.
 						p Записи всех занятий Вы получите навсегда и в любой момент сможете к ним вернуться.
 						p #[span Обучение будет состоять из трех блоков.]
-			+e.item
+			+e.item.card-bordered
 				+e.row-title.inner-item
 					h3 Вводная часть
 					.h5
@@ -48,7 +48,7 @@ mixin sStudy(data)
 				+e.col.col-lg-6
 					.h4 Вы слышали, как мастера кунг-фу обучали своих учеников? #[span Первый этап всегда был – ходи за мной и смотри, как я это делаю.] 
 					p У Вас вводный этап будет точно таким же, он поможет Вашему подсознательному привыкнуть к специфике торговли и запустить нужные мысленные процессы.
-			+e.item
+			+e.item.card-bordered
 				+e.row-title.inner-item
 					h3 Основная программа обучения
 					.h5
@@ -125,7 +125,7 @@ mixin sStudy(data)
 				+e.col
 					p Как видите, план занятий объемный и четко структурирован. Все детали и нюансы торговой системы мы разберем от и до.
 					.h4  По итогам этих занятий #[span Вы будете на 100% готовы к реальным торгам] (или на демо, на реальном рынке, если Вам так комфортно).
-			+e.item
+			+e.item.card-bordered
 				+e.row-title.inner-item
 					h3 Мастер-группа
 					.h5
