--- a/sourse/pug/blocks/sWhyUSA/_sWhyUSA.pug
+++ b/sourse/pug/blocks/sWhyUSA/_sWhyUSA.pug
@@ -8,7 +8,7 @@ mixin sWhyUSA(data)
 			.text-center: .h4 Как торговать акциями США, если Вы из РФ?
 			+e.row.row
 				+e.col.col-lg-6
-					+e.item
+					+e.item.card-bordered
 						.h5 Брокер Just2Trade – самый простой способ получить доступ к рынку США для россиян.
 						ul.point
 							li зарекомендовал себя многолетней работой, как надежный брокер;
@@ -17,7 +17,7 @@ mixin sWhyUSA(data)
 							li дает бесплатный торговый терминал MetaTrader 5;
 							li нет проблем с вводом-выводом денег.
 				+e.col.col-lg-6
-					+e.item
+					+e.item.card-bordered
 						.h5 Как еще получить доступ к акциям США из РФ, если Вы не из тех, кто ищет легкие пути?
 						ul.point
 							li российский брокер Финам. Требуется статус квалифицированного инвестора, ограниченный список акций.
