--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -5,19 +5,27 @@
 	color: $black;
 	z-index: 1;
 	@include media-breakpoint-up(lg) {
-		padding: rem(40) 0 rem(120);
+		padding: rem(44) 0 rem(120);
 	}
 	&__container {
 		.before {
 			@include media-breakpoint-up(md) {
-				top: 40%;
-				left: 45%;
+				top: 36%;
+				left: 50.5%;
+        transform: translate(-50%,-50%);
 				position: absolute;
-				margin-left: rem(-15);
-				margin-top: rem(-44.500);
-				margin-bottom: rem(20);
+				// margin-left: rem(-15);
+				// margin-top: rem(-44.500);
+				// margin-bottom: rem(20);
 				z-index: -1;
 			}
+			@include media-breakpoint-up(xl) {
+        svg{
+          width: rem(207);
+          height: auto;
+        }
+        
+      }
 
 			display: block;
 
@@ -30,20 +38,17 @@
 	}
 	a {
 		color: $black;
-		font-size: 15px;
+		font-size: 16px;
 		text-decoration: none;
 		border-bottom: 1px solid $gray-200 !important;
 		&:hover {
 			border-bottom-color: transparent !important;
 		}
 	}
-	// background-image: url(..);
 
-	// background: #EDEDF5;
 	color: $gray-200;
 
 	a {
-		// @extend .tdu;
 		color: $gray-200!important;
 		&:hover{
 			opacity: .8;
@@ -64,7 +69,7 @@
 			font-feature-settings: 'pnum' on, 'lnum' on;
 		}
 		h6 {
-			font-family: $font-family-sans-serif;
+			// font-family: $font-family-sans-serif;
 			text-transform: initial;
 			margin-bottom: rem(16.500);
 		}
@@ -97,9 +102,19 @@
 					max-width: max-content;
 					margin-left: auto;
 				}
+        @include media-breakpoint-up(xxl) {
+          font-size: rem(20);
+        }
 			}
 		}
 	}
+  .text-lg-end {
+    p {
+      @include media-breakpoint-up(xxl) {
+        font-size: rem(20);
+      }
+    }
+  }
 	&__left-col {
 		a {
 			display: inline;
