--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,29 +1,131 @@
 // start .headerBlock
 .headerBlock {
-	// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()}; 
-	min-height: 100vh;
-	min-height: calc(var(--vh, 1vh) * 100);
-	
-	
-	&__row{
-		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: var(--bs-gutter-x);
+	--sPT: #{rem(120)};
+	--sPB: #{rem(20)};
+  @include media-breakpoint-up(xl) {
+    --sPB: #{rem(84)};
+  }
 
-	}
-	.section-title{
-		
-	}
-	&__col{
+	overflow: hidden;
+  position: relative;
 
+	&__row {
+		// --bs-gutter-x: #{rem(32)};
+		--bs-gutter-y:  #{rem(40)};
 	}
-	&__item{
 
+  .h2 {
+    span {
+      color: $primary;
+    }
+    @include media-breakpoint-up(xl) {
+      font-size: rem(100);
+      margin-bottom: rem(20);
+    }
+    @include media-breakpoint-up(xxl) {
+      font-size: rem(120);
+    }
+  }
+  .h3 {
+    max-width: rem(555);
+    line-height: 100%;
+  }
+
+	.adv-card-icon {
+    padding: 0;
+    border: none;
+    max-width: rem(158);
+  }
+
+	&__item {
+    margin-bottom: rem(40);
+    &:last-child {
+      margin-bottom: 0;
+    }
+    @include media-breakpoint-up(xl) {
+      margin-bottom: rem(64);
+    }
 	}
-	&__slide{
-		height: auto;
-	}
+
+	.grid {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: rem(8);
+    @include media-breakpoint-up(sm) {
+      gap: rem(20);
+    }
+    max-width: rem(580);
+  }
+
+  .author {
+    max-width: 70%;
+    margin-bottom: calc(var(--sPB) * -1);
+    transform: translateX(25%);
+    @include media-breakpoint-up(lg) {
+      position: absolute;
+      margin-bottom: 0;
+      bottom: 0;
+      right: 6%;
+      z-index: 2;
+      max-width: 36%;
+      transform: translateX(0);
+    }
+    @include media-breakpoint-up(xxl) {
+      max-width: rem(752);
+      width: 40vw;
+    }
+  }
+
+  .decor {
+    max-width: 100%;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    bottom: 0;
+    @include media-breakpoint-up(lg) {
+      transform: translate(0);
+      max-width: 48%;
+      left: auto;
+      right: 9%;
+    }
+  }
+  .decor-bottom {
+    z-index: -1;
+    width: 100%;
+    @include media-breakpoint-up(lg) {
+      right: 0;
+      bottom: -4%;
+      max-width: 100%;
+      width: 60vw;
+    }
+  }
+  .decor-circle {
+    z-index: -1;
+    bottom: -2%;
+    width: 38vw;
+    left: 33%;
+    @include media-breakpoint-up(xl) {
+      right: 28%;
+    }
+    @include media-breakpoint-up(lg) {
+      bottom: -12%;
+      right: 22%;
+      max-width: rem(480);
+      width: 26vw;
+    }
+  }
+  .decor-top {
+    z-index: 3;
+    left: 64%;
+    bottom: -1%;
+    max-width: 100%;
+    width: 17vw;
+    @include media-breakpoint-up(lg) {
+      right: 9%;
+      bottom: -9%;
+      max-width: rem(320);
+    }
+  }
 
 	@include media-breakpoint-up(xl) {}
 
