--- a/sourse/pug/blocks/sWhyUSA/_sWhyUSA.scss
+++ b/sourse/pug/blocks/sWhyUSA/_sWhyUSA.scss
@@ -7,6 +7,7 @@
   border-radius: 40px 40px 0 0;
 	@include media-breakpoint-up(lg) {
     
+	  --sPB: #{rem(0)};
     --sTPB: #{rem(60)};
   }
 	
@@ -49,43 +50,7 @@
 			margin-bottom: rem(24);
 		}
 
-    border-radius: $border-radius;
-    padding: rem(20px);
-    background: #0d0d0d;
-    @include media-breakpoint-up(lg) {
-      padding: rem(40px);
-    }
     margin-bottom: var(--mb);
-
-    position: relative;
-    z-index: 2;
-
-    &::before, &::after {
-      content: '';
-      position: absolute;
-      border-radius: inherit;
-    }
-
-    &::before {
-      top: -1px;
-      left: -1px;
-      width: calc(100% + 2px);
-      height: calc(100% + 2px);
-      background: linear-gradient(
-        135deg,
-        #262626 0%,
-        #772a2a 45%,
-        #232323 100%);
-      z-index: -2;
-    }
-    &::after {
-      top: 0;
-      left: 0;
-      width: calc(100%);
-      height: calc(100%);
-      background: inherit;
-      z-index: -1;
-    }
 	}
 
 	&__btn-wrap {
@@ -109,6 +74,7 @@
     background: url(../img/svg/point.svg);
     background-repeat: no-repeat;
     padding-left: rem(28);
+    background-position-y: center;
 	}
 
 }
