--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -472,3 +472,43 @@ iframe {
 		object-fit: cover;
 	}
 }
+
+.card-bordered {
+  border-radius: $border-radius;
+  background: #0d0d0d;
+  box-shadow: 0 7px 7px 0 rgba(0, 0, 0, 0.24);
+  position: relative;
+  z-index: 2;
+
+  padding: rem(20px);
+  @include media-breakpoint-up(lg) {
+    padding: rem(40px);
+  }
+
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    border-radius: inherit;
+  }
+
+  &::before {
+    top: -1px;
+    left: -1px;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    background: linear-gradient(
+      135deg,
+      #262626 0%,
+      #772a2a 45%,
+      #232323 100%);
+    z-index: -2;
+  }
+  &::after {
+    top: 0;
+    left: 0;
+    width: calc(100%);
+    height: calc(100%);
+    background: inherit;
+    z-index: -1;
+  }
+}
