--- a/sourse/pug/blocks/sApply/_sApply.scss
+++ b/sourse/pug/blocks/sApply/_sApply.scss
@@ -32,16 +32,20 @@
   }
 
   .form-title {
-    margin-bottom: rem(32);
+    // margin-bottom: rem(0);
   }
 
   .form {
     padding: rem(26) 0;
+    border-radius: 20px;
+    background: #0B0B0B;
     // border-radius: rem(20);
     // background: linear-gradient(136deg, #d2f3ff 0%, #bffff1 100%);
     @include media-breakpoint-up(md) {
-      padding: rem(40);
-      padding-bottom: rem(43);
+      padding: rem(40) rem(20);
+    }
+    @include media-breakpoint-down(sm) {
+      background: transparent;
     }
   }
   .form-group, .form-control {
@@ -50,16 +54,67 @@
   .inbfrm {
     margin: auto;
   }
-  // form {
-  //   display: grid;
-  //   gap: rem(9);
-  //   @include media-breakpoint-up(lg) {
-  //     grid-template-columns: repeat(2, 1fr);
-  //   }
-  //   @include media-breakpoint-up(xl) {
-  //     grid-template-columns: repeat(3, 1fr) min-content;
-  //   }
-  // }
+  form {
+    display: grid;
+    gap: rem(9);
+    @include media-breakpoint-up(lg) {
+      // grid-template-columns: repeat(2, 1fr);
+    }
+    @include media-breakpoint-up(xl) {
+      grid-template-columns: repeat(3, 1fr) min-content;
+    }
+  }
+
+  .inbfrm.v2 {
+    background-color: transparent;
+    border: none;
+    max-width: none;
+    padding: 0;
+    .title {
+      display: none;
+    }
+    form {
+      margin: 0;
+      padding-bottom: 0;
+      background: transparent;
+      @include media-breakpoint-down(sm) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+    .privacy_agreement_block label {
+      color: $body-color;
+    }
+    .input_line {
+      margin: 0;
+      input {
+        text-align: start;
+        border-color: #606060;
+        padding: rem(17);
+        background: #423C43;
+        font-size: 16px;
+        color: white;
+      }
+    }
+    .submit_line {
+      input {
+        height: 100%;
+        border-radius: 8px;
+        margin: 0;
+        font-size: 16px;
+        padding: rem(17) rem(20);
+        text-transform: unset;
+        color: white;
+        background: linear-gradient(180deg, #e90b0b 0%, #930f0f 100%);
+
+      }
+    }
+      
+    input[type=checkbox] {
+      transform: translateY(-2px);
+    }
+  }
+
 
   .btn {
     height: calc(100% - 8px);
