--- a/sourse/pug/blocks/sSuccess/_sSuccess.scss
+++ b/sourse/pug/blocks/sSuccess/_sSuccess.scss
@@ -3,30 +3,119 @@
 	// --sPT: #{rem()};
 	--sPB: #{rem(0)};
 	--sTPB: #{rem(32)};
-	
-	&__row{
+
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
 	}
-  &__item{
-		max-width: rem(630);
-    margin: auto;
-    margin-bottom: rem(72);
+	&__item-scroll {
+		height: 594px;
+		overflow-x: hidden;
+		overflow-y: auto;
+		position: relative;
+		border-radius: 20px;
+		padding: 10px;
+		background: #0d0d0d;
+
+		@media (hover: hover) {
+			& {
+				scrollbar-width: auto;
+				scrollbar-color: var(--bs-primary) transparent;
+			}
+
+			/* Chrome, Edge, and Safari */
+			&::-webkit-scrollbar {
+				width: 4px;
+			}
+
+			&::-webkit-scrollbar-track {
+				background: transparent;
+			}
+
+			&::-webkit-scrollbar-thumb {
+				background-color: var(--bs-primary);
+				border-radius: 16px;
+				border: 0px solid transparent;
+			}
+		}
+	}
+	&__item-wrap {
+		margin-bottom: rem(72px);
+		overflow: hidden;
+		position: relative;
+		background-image: linear-gradient(
+			100.54deg,
+			#000000 1.51%,
+			#a74d4d 48.79%,
+			#101010 100%
+		);
+
+		padding: 16px;
+		box-shadow:
+			0px 4px 250px rgba(117, 4, 4, 0.31),
+			inset 0px 17px 47.5px rgba(0, 0, 0, 0.44);
+		border-radius: 20px;
+
+		&::before {
+			content: "";
+			display: block;
+			width: 100%;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			height: 90px;
+			z-index: 4;
+			pointer-events: none;
+			background: -o-linear-gradient(
+				bottom,
+				#1c1c20 0%,
+				rgba(28, 28, 32, 0) 100%
+			);
+			background: -webkit-gradient(
+				linear,
+				left bottom,
+				left top,
+				from(#1c1c20),
+				to(rgba(28, 28, 32, 0))
+			);
+			background: linear-gradient(0deg, #1c1c20 0%, rgba(28, 28, 32, 0) 100%);
+		}
+		// height: 594px;
+
+		/* Inside auto layout */
+	}
+	&__item {
+		// max-width: rem(630);
+		margin: auto;
+		// height: 100%;
+		margin-bottom: rem(72);
+		@include media-breakpoint-up(sm) {
+			columns: 2;
+		}
+		width: 100%;
 	}
 
-  img {
-    max-width: 100%;
-  }
-  .review-item {
-    margin-bottom: rem(32);
-    cursor: pointer;
-  }
+	img {
+		max-width: 100%;
+	}
+	.review-item {
+		margin-bottom: rem(32);
+		cursor: pointer;
+	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sSuccess
